--- a/src/scss/theme/_theme_variables.scss
+++ b/src/scss/theme/_theme_variables.scss
@@ -53,7 +53,7 @@ $border-radius-sm:            1px !default;
 
 // Fonts
 
-$font-family-sans-serif:      "Nunito Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+$font-family-sans-serif:      "Oxygen", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
 
 $font-size-base:              0.875rem !default;
 $font-size-sm:                0.675rem !default;
