support for oembed

--- a/src/scss/theme/_theme.scss
+++ b/src/scss/theme/_theme.scss
@@ -101,3 +101,11 @@ img.wp-smiley, img.emoji, .codeat h3 img {
 	text-align:center;
 }
 
+.instagram-media,.twitter-tweet {
+  margin: 0 auto !important;
+}
+
+iframe {
+	margin:0 auto;
+	display:block;
+}
