--- a/src/scss/understrap/understrap.scss
+++ b/src/scss/understrap/understrap.scss
@@ -1,6 +1,6 @@
 // Some basic padding for all wrappers
 .wrapper {
-  padding: $grid-gutter-width 0; }
+  padding: 15px 0; }
 
 // Reset hero wrapper padding to 0
 #wrapper-hero { padding: 0px !important; }
