--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -3,9 +3,9 @@
 @import "understrap/understrap";// <-------- Loads the UnderStrap defaults. Just a few classes to incorporate BS in WP
 
 //Optional files - If you dont use the corresponding scripts/fonts comment em out
-@import "fontawesome/solid";
+/*@import "fontawesome/solid";
 @import "fontawesome/brands";
-@import "fontawesome/fontawesome"; // <------- Font Awesome Icon font
+@import "fontawesome/fontawesome"; // <------- Font Awesome Icon font*/
 @import "underscores"; // <------- Underscores media styles
 
 @import "theme/lux";
