--- a/src/scss/theme/_theme.scss
+++ b/src/scss/theme/_theme.scss
@@ -2,6 +2,10 @@
 	background-color:$blue;
 }
 
+.sb_share i {
+	font-size:34px;
+}
+
 img.wp-smiley, img.emoji, .codeat h3 img {
     display: inline !important;
     border: none !important;
