--- a/src/scss/bootstrap4.scss
+++ b/src/scss/bootstrap4.scss
@@ -14,6 +14,7 @@
 @import "bootstrap4/images";
 @import "bootstrap4/code";
 @import "bootstrap4/grid";
+@import "bootstrap4/alert";
 @import "bootstrap4/forms";
 @import "bootstrap4/buttons";
 @import "bootstrap4/transitions";
