--- a/src/scss/theme/_theme.scss
+++ b/src/scss/theme/_theme.scss
@@ -55,6 +55,7 @@ img.wp-smiley, img.emoji, .codeat h3 img {
 .navbar-left, .navbar-right {
 	top: -10px;
 	float: left;
+	width: 90px;
 
 	.navbar-nav {
 		flex-direction: column;
