--- a/src/scss/theme/_theme.scss
+++ b/src/scss/theme/_theme.scss
@@ -146,7 +146,7 @@ img.wp-smiley, img.emoji, .codeat h3 img {
 	display:block;
 }
 
-#custom-html-2 .textwidget {
+#custom_html-2 .textwidget {
 	text-align:center;
 }
 
