feat(various): improvements

--- a/src/scss/bootstrap4.scss
+++ b/src/scss/bootstrap4.scss
@@ -24,6 +24,6 @@
 @import "bootstrap4/navbar";
 @import "bootstrap4/pagination";
 @import "bootstrap4/media";
-@import "bootstrap4/carousel";
+//@import "bootstrap4/carousel";
 @import "bootstrap4/utilities";
 @import "bootstrap4/print";
