--- a/src/scss/theme/_theme.scss
+++ b/src/scss/theme/_theme.scss
@@ -116,19 +116,18 @@ ol.children {
 		color: rgb(255, 255, 255);
 		font-size: 24px;
 	}
-	.navbar-left {
-		.navbar-toggler {
-			float: left;
-		}
-		.navbar-nav {
-			padding-bottom: 15px;
-			margin-top: -10px;
-		}
+	.navbar-left, .navbar-right {
+		float: none;
+		top: 130px;
+		z-index:99999;
+		position: absolute;
 	}
 	.navbar-right {
-		.navbar-toggler {
-			float: right;
-		}
+		right:0;
+	}
+	.navbar-left .navbar-nav {
+		padding-bottom: 15px;
+		margin-top: -10px;
 	}
 	.navbar-toggler {
 		width: 60px;
@@ -137,6 +136,9 @@ ol.children {
 	.row {
 		width:100%;
 		margin: 0 auto;
+	}
+	.wrapper {
+		margin-top: 100px;
 	}
 	#wrapper-footer {
 		display: none;
