feat(tinymce): autolink

--- a/src/scss/theme/_theme_variables.scss
+++ b/src/scss/theme/_theme_variables.scss
@@ -65,6 +65,8 @@ $h4-font-size:                1.25rem !default;
 $h5-font-size:                1rem !default;
 $h6-font-size:                0.75rem !default;
 
+$font-weight-bolder: bold !default;
+
 $headings-font-weight:        600 !default;
 $headings-color:              $gray-900 !default;
 
@@ -90,6 +92,7 @@ $input-btn-padding-y-lg:      2rem !default;
 $input-btn-padding-x-lg:      3rem !default;
 
 $btn-font-weight:             600 !default;
+
 
 // Forms
 
